--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./solicitud-datos.js"></script>
+    <script src="./operadores.js"></script>
 </body>
 </html>
